# selib

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: attr_results.json  attributed_compare.json  facet_tags.jsonl  gallery.html  gallery.json  hier_results.json  index.html  maps.html  periodic.html  recursive.html  recursive.json  se_periodic.json  segnn_head_eval.json  tutorial.html  tutorial.json
learn/: README.md  backends.py  min_se_clustering.py  min_se_contrastive.py  min_se_exploration.py  min_se_gsl.py  min_se_hierarchy.py  min_se_pi.py  min_se_resolution.py  min_se_uq.py  min_sep_pooling.py
results/: attr_results.json  benchmark_results.json  compare_results.json  facet_tags.jsonl  facets_schema.json  hcse_bbm_results.json  hier_large_results.json  hier_results.json  papers_core.json  recursive.json  robustness_results.json  se_crosscheck.json  se_crosscheck_tree.json  se_periodic.json  segnn_sweep.json  viz.json
scripts/: build_gallery.py  build_periodic.py  build_recursive.py  build_site.py  build_tutorial.py  eval_segnn_head.py  gen_paper_tables.py  run_attr_benchmark.py  run_compare.py  run_full_benchmark.py  run_gallery.py  run_hcse_bbm.py  run_hier_benchmark.py  run_hier_large.py  run_recursive.py  run_robustness.py  run_tutorial.py  se_crosscheck.py  se_crosscheck_tree.py  sweep_segnn.py
selib/: __init__.py  base.py  benchmark.py  calc.py  datasets.py  htree.py  metrics.py  se.py  segnn.py  seopt.py  sepi.py
selib/methods/: __init__.py  baselines.py  se_native.py  wrappers.py
tests/: test_selftests.py  test_smoke.py
