[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "selib"
version = "0.2.0"
description = "A standardized library for structural entropy: compute it, optimize it, and benchmark SE methods against baselines under one API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SuuTTT" }]
keywords = ["structural entropy", "community detection", "graph learning", "encoding tree", "benchmark"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "networkx>=2.8",
    "numpy>=1.21",
    "scipy>=1.8",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
# classical baselines that ship their own optimized solvers
extra = ["python-louvain>=0.16", "leidenalg>=0.9", "python-igraph>=0.10", "infomap>=2.6",
         "scikit-network>=0.31"]  # scikit-network enables the Paris warm-start in se_hier
gnn = ["jax", "numpy<2"]          # enables the attribute-aware se_gnn method
dev = ["pytest>=7", "matplotlib>=3.5"]

[project.urls]
Homepage = "https://github.com/SuuTTT/selib"
Benchmark = "https://github.com/SuuTTT/structural-entropy-benchmark"
Paper = "https://github.com/SuuTTT/structural-entropy-survey-paper"

[tool.setuptools.packages.find]
include = ["selib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
